# RationalNumber

./: CMakeLists.txt  README.md
libRational/: CMakeLists.txt
libRational/doc/: Doxyfile-html.cmake
libRational/include/: Rational.hpp
libRational/src/: Rational.cpp  rational.cpp
myExamples/: CMakeLists.txt
myExamples/src/: rationalTest.cpp
myTest/: CMakeLists.txt
myTest/src/: sample_test.cpp
